feat: Backend integration, Hybrid Mode, and Deployment Guide

--- a/index.html
+++ b/index.html
@@ -30,12 +30,18 @@
                     <h1 class="text-2xl md:text-3xl font-semibold tracking-wide">Vox Librorum</h1>
                 </div>
             </div>
-            <nav class="flex flex-wrap items-center gap-3">
-                <a class="nav-link" href="#about">About</a>
-                <a class="nav-link" href="#archive">Archive</a>
-                <a class="nav-link" href="oral-histories/index.html">Oral History</a>
-                <a class="nav-link" href="voices/index.html">Voices</a>
-                <a class="nav-link" href="#contact">Contact</a>
+            <nav class="hidden md:flex items-center gap-8">
+                <a href="archive/index.html"
+                    class="nav-link text-sm uppercase tracking-widest text-white/60 hover:text-white transition-colors">Archive</a>
+                <a href="oral-histories/index.html"
+                    class="nav-link text-sm uppercase tracking-widest text-white/60 hover:text-white transition-colors">Oral
+                    Histories</a>
+                <a href="voices/index.html"
+                    class="nav-link text-sm uppercase tracking-widest text-white/60 hover:text-white transition-colors">Voices</a>
+                <a href="#contact"
+                    class="nav-link text-sm uppercase tracking-widest text-white/60 hover:text-white transition-colors">Contact</a>
+                <a href="login.html"
+                    class="nav-link text-sm uppercase tracking-widest text-amber-500 hover:text-amber-400 transition-colors border border-amber-500/30 px-4 py-1 rounded hover:bg-amber-500/10">Access</a>
             </nav>
         </div>
         <div class="scroll-progress" aria-hidden="true">
