fix: Update script path for GitHub Pages compatibility

--- a/login.html
+++ b/login.html
@@ -104,6 +104,7 @@
 </head>
 
 <body>
+    <script src="public/js/login.js"></script>
     <div class="bg-gate"></div>
 
     <div class="login-panel">
